overlap and color issues

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     --space-l: 1.5rem;
     --space-xl: 2rem;
     --space-xxl: 3rem;
+    --space-xxxl: 5rem;
 
     --radius-s: 0.375rem;
     --radius-m: 0.5rem;
@@ -32,15 +33,13 @@
     --transition-fast: 150ms ease-in-out;
     --transition-normal: 300ms ease-in-out;
     --transition-slow: 450ms ease-in-out;
-
-    --navbar-height: 4rem;
 }
 
 body {
   font-family: var(--font-primary), sans-serif;
   background-color: var(--accent);
   color: var(--secondary);
-  padding-top: var(--navbar-height);
+  padding-top: var(--space-xxxl);
   min-height: 100vh;
   margin: 0;
   padding-left: 0;
@@ -91,6 +90,11 @@ nav a:link {
   text-decoration: none;
 }
 
+nav a:visited {
+  color: var(--accent);
+  text-decoration: none;
+}
+
 nav a:hover {
   color: var(--primary-light);
   text-decoration: none;
@@ -104,7 +108,7 @@ nav {
   z-index: 1000;
   background-image: linear-gradient(var(--primary-dark), var(--secondary));
   border-bottom: 1px solid var(--primary-dark);
-  height: var(--navbar-height);
+  height: var(--space-xxl);
   display: flex;
   align-items: center;
   justify-content: center;
